--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <meta name='author' content='Erratic Enigma'>
   <meta name='description' content="Implementation of the 'Four card feature' project from Frontend Mentor.">
+
+  <!-- favicon nonsense -->
+  <link rel='icon' href='/favicon.ico' sizes='48x48'>
+  <link rel='icon' href='/favicon.svg' sizes='any' type='image/svg+xml'>
+  <link rel='apple-touch-icon' href='/apple-touch-icon.png'>
+  <link rel='manifest' href='/.webmanifest'>
+
   <script src='/source/view/index.js' type='module'></script>
   <title>Four Card Feature</title>
 </head>
