--- a/index.html
+++ b/index.html
@@ -15,6 +15,54 @@
   <script src='/source/view/index.js' type='module'></script>
   <title>Four Card Feature</title>
 </head>
-<body>
+<body style='row-gap:0;'>
+  <main>
+    <h1 class='visually-hidden'>Four Card Feature</h1>
+    <h2 class='section-heading'>
+      <span class='first'>Reliable, efficient delivery</span>
+      <span class='second'>Powered by Technology</span>
+    </h2>
+
+    <p class='u-js-center u-mbe-large u-mw-56ch'>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+
+    <div class='card-grid'>
+      <div class='feature-card -cyan'>
+        <h3 class='heading'>Supervisor</h3>
+        <p class='paragraph'>Monitors activity to identify project roadblocks</p>
+        <svg class= 'icon vector-icon' role='presentation' width='64' height='64'>
+          <use href='/feature-card.svg#magnifying-glass'></use>
+        </svg>
+      </div>
+
+      <div class='feature-card -red'>
+        <h3 class='heading'>Team Builder</h3>
+        <p class='paragraph'>Scans our talent network to create the optimal team for your project</p>
+        <svg class='icon vector-icon' role='presentation' width='64' height='64'>
+          <use href='/feature-card.svg#application-home'></use>
+        </svg>
+      </div>
+
+      <div class='feature-card -orange'>
+        <h3 class='heading'>Karma</h3>
+        <p class='paragraph'>Regularly evaluates our talent to ensure quality</p>
+        <svg class='icon vector-icon' role='presentation' width='64' height='64'>
+          <use href='/feature-card.svg#light-bulb'></use>
+        </svg>
+      </div>
+
+      <div class='feature-card -blue'>
+        <h3 class='heading'>Calculator</h3>
+        <p class='paragraph'>Uses data from past projects to provide better delivery estimates</p>
+        <svg class='icon vector-icon' role='presentation' width='64' height='64'>
+          <use href='/feature-card.svg#monitor'></use>
+        </svg>
+      </div>
+    </div>
+  </main>
+
+  <footer class='attribution-bar -light' style='display:none;'>
+    Challenge by <a class='link' href='https://www.frontendmentor.io?ref=challenge' target='_blank'>Frontend Mentor</a>.
+    Coded by <a class='link' href='https://github.com/erratic-enigma'>Erratic Enigma</a>.
+  </footer>
 </body>
 </html>
