removed temporary style attributes in markup

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src='/source/view/index.js' type='module'></script>
   <title>Four Card Feature</title>
 </head>
-<body style='row-gap:0;'>
+<body>
   <main>
     <h1 class='visually-hidden'>Four Card Feature</h1>
     <h2 class='section-heading'>
@@ -60,7 +60,7 @@
     </div>
   </main>
 
-  <footer class='attribution-bar -light' style='display:none;'>
+  <footer class='attribution-bar -light'>
     Challenge by <a class='link' href='https://www.frontendmentor.io?ref=challenge' target='_blank'>Frontend Mentor</a>.
     Coded by <a class='link' href='https://github.com/erratic-enigma'>Erratic Enigma</a>.
   </footer>
